--- a/pom.xml
+++ b/pom.xml
@@ -125,9 +125,9 @@
         </developer>
     </developers>
     <scm>
-        <connection>scm:git:git@github.com/xmlet/HtmlFlow.git</connection>
-        <developerConnection>scm:git:git@github.com/xmlet/HtmlFlow.git</developerConnection>
-        <url>git@github.com/xmlet/HtmlFlow.git</url>
+        <connection>scm:git:git@github.com:xmlet/HtmlFlow.git</connection>
+        <developerConnection>scm:git:git@github.com:xmlet/HtmlFlow.git</developerConnection>
+        <url>git@github.com:xmlet/HtmlFlow.git</url>
         <!--tag>HEAD</tag-->
       <tag>xsdParser-1.0.0</tag>
   </scm>
