--- a/release.properties
+++ b/release.properties
@@ -1,8 +1,8 @@
 #release configuration
-#Wed Jan 10 18:09:36 GMT 2018
+#Wed Jan 10 18:17:10 GMT 2018
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 pushChanges=true
-scm.url=scm\:git\:git@github.com/xmlet/HtmlFlow.git
+scm.url=scm\:git\:git@github.com\:xmlet/HtmlFlow.git
 preparationGoals=clean verify
 projectVersionPolicyId=default
 remoteTagging=true
