--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.github.xmlet</groupId>
     <artifactId>xsdParser</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 
     <build>
@@ -125,9 +125,9 @@
         </developer>
     </developers>
     <scm>
-        <connection>scm:git:git@github.com:xmlet/HtmlFlow.git</connection>
-        <developerConnection>scm:git:git@github.com:xmlet/HtmlFlow.git</developerConnection>
-        <url>git@github.com:xmlet/HtmlFlow.git</url>
+        <connection>scm:git:git@github.com:xmlet/XsdParser.git</connection>
+        <developerConnection>scm:git:git@github.com:xmlet/XsdParser.git</developerConnection>
+        <url>git@github.com:xmlet/XsdParser.git</url>
         <!--tag>HEAD</tag-->
       <tag>xsdParser-1.0.0</tag>
   </scm>
