--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,15 @@
                 </executions>
             </plugin-->
         </plugins>
+
+        <testResources>
+            <testResource>
+                <directory>${project.basedir}/src/test/resources</directory>
+                <includes>
+                    <include>**/**</include>
+                </includes>
+            </testResource>
+        </testResources>
     </build>
 
     <dependencies>
