--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
                         </goals>
                         <configuration>
                             <show>private</show>
+                            <source>1.8</source>
                         </configuration>
                     </execution>
                 </executions>
