--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.github.xmlet</groupId>
     <artifactId>xsdParser</artifactId>
-    <version>1.2.12</version>
+    <version>1.2.13-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 
     <build>
@@ -171,7 +171,7 @@
         <connection>scm:git:git@github.com:xmlet/XsdParser.git</connection>
         <developerConnection>scm:git:git@github.com:xmlet/XsdParser.git</developerConnection>
         <url>git@github.com:xmlet/XsdParser.git</url>
-        <tag>xsdParser-1.2.12</tag>
+        <tag>xsdParser-1.0.2</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
