--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
                 <executions>
                     <execution>
                         <id>attach-sources</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>
                                 jar-no-fork
